hphp/hack/test/typecheck/hh_fixme9.php.exp
File "hh_fixme9.php", line 8, characters 10-11:
Invalid return type (Typing[4110])
File "hh_fixme9.php", line 3, characters 18-20:
This is an int
File "hh_fixme9.php", line 8, characters 10-11:
It is incompatible with a string
